# tailwind_django_template

./: LICENSE  README copy.md  README.md  manage.py  pyproject.toml
crm/: urls.py  views.py
crm/templates/bookmark/: index.html
crm/templates/clipboard/: index.html
crm/templates/crm/: gallery.html  index.html  login.html  pricing.html  product-modal.html  signup.html
crm/templates/fylo/: index.html
crm/templates/loopstudios/: index.html
crm/templates/shortly/: index.html
crm/templates/testimonials/: index.html
static/css/: input.css  output.css  tailwind.config.js
static/js/bookmark/: script.js
static/js/loopstudios/: script.js
static/js/shortly/: script.js
tailwind-sandbox-ref/10-interactivity/: index.html
tailwind_django_template/: asgi.py  settings.py  urls.py  wsgi.py
theme/: README.md
theme/static_src/src/: styles.css
